# cliff-watch

./: .gitignore  COMPUTE_STRATEGY.md  README.md  pyproject.toml  vercel.json
.github/workflows/: deploy-frontend.yml
api/: __init__.py  _shared.py  calculate.py  households.py  metadata.py  series.py  states.py
cliff_watch/: __init__.py  calculator.py  config.py  dev_server.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: robots.txt  sitemap.xml
frontend/src/: App.css  App.jsx  dataLookup.js  policyengineApi.js  policyengineApi.test.js
frontend/src/components/: BenefitChart.jsx  CliffInsights.jsx  HouseholdComparison.jsx  InputPanel.jsx  ProgramBreakdown.jsx  ResultsPanel.jsx  StateMap.jsx  StateRanking.jsx
frontend/src/utils/: cliffReport.js  niceTicks.js  seriesRefine.js  urlState.js
scripts/: __init__.py  calculator.py  config.py  dev_api_server.py  sample_household.json
tests/: test_chip_premium.py  test_cliff_drivers.py  test_policyengine_repo_selection.py
